--- a/Test_02/config.yaml
+++ b/Test_02/config.yaml
@@ -6,12 +6,13 @@ ntotal: 20
 batch_size: 16
 epoch_size: -1
 
-lr: 5.e-3
+lr: 1.e-3
+lr_new: -1  #use -1 otehrwise
 weight_decay: 1.e-5
 
 n_mu: 3
 
-n_exp_train: 5
+n_exp_train: 20
 n_exp_val: 5
 n_exp_test: 5
 noise: 0.01
@@ -19,7 +20,7 @@ noise: 0.01
 n_iter_max: 100000
 n_plot: 20 # frequency of callback
 
-n_iter_buffer: 50
+n_iter_buffer: 5000
 n_iter_burnin: 100
 n_iter_tol: 10000
 convergence_tol: 1e-8
