--- a/Test_02/config.yaml
+++ b/Test_02/config.yaml
@@ -3,28 +3,25 @@ network: "beeline_networks/Synthetic_LI.csv"
 ns: 7
 
 tfinal: 20.0
-ntotal: 20
-batch_size: 8
+ntotal: 1
+nplot: 100
+batch_size: 1
 epoch_size: -1
 
-lr: 1.e-2
+lr: 1.e-3
 weight_decay: 1.e-4
 
-n_mu: 3
+n_mu: 2
 
-n_exp_train: 256
-n_exp_val: 20
-n_exp_test: 20
-noise: 0.01
+n_exp_train: 10
+n_exp_val: 2
+n_exp_test: 2
+noise: 0.1
 
-n_iter_max: 10
+n_iter_max: 100
 n_plot: 20 # frequency of callback
 
-n_iter_buffer: 50
-n_iter_burnin: 100
-n_iter_tol: 10
+n_iter_buffer: 10
+n_iter_burnin: 10
+n_iter_tol: 50
 convergence_tol: 1e-8
-
-drop_range:
-   lb: -0.1
-   ub: 0.1
