--- a/Test_Beeline/Synthetic/CY/config.yaml
+++ b/Test_Beeline/Synthetic/CY/config.yaml
@@ -1,26 +1,27 @@
 network: "beeline_networks/Synthetic_CY.csv"
 ns: 6
+latency: 4.0
 
-tfinal: 100.0
-ntotal: 30
+tfinal: 20.0
+ntotal: 10
 nplot: 100
 batch_size: 10
 epoch_size: -1
 
 lr: 1.e-3
-weight_decay: 1.e-4
+weight_decay: 1.e-12
 
 n_mu: 2
 
 n_exp_train: 10
-n_exp_val: 2
-n_exp_test: 2
-noise: 0.1
+n_exp_val: 10
+n_exp_test: 10
+noise: 0.0
 
 n_iter_max: 100
 n_plot: 20 # frequency of callback
 
-n_iter_buffer: 10
-n_iter_burnin: 10
-n_iter_tol: 50
+n_iter_buffer: 50
+n_iter_burnin: 100
+n_iter_tol: 100
 convergence_tol: 1e-8
