--- a/Test_Beeline/Synthetic/BF/config.yaml
+++ b/Test_Beeline/Synthetic/BF/config.yaml
@@ -1,14 +1,15 @@
 network: "beeline_networks/Synthetic_BF.csv"
 ns: 7
+alpha: 1.0
 
 tfinal: 20.0
-ntotal: 10
+ntotal: 5
 nplot: 100
 batch_size: 5
 epoch_size: -1
 
-lr: 1.e-3
-weight_decay: 1.e-12
+lr: 1.e-4
+weight_decay: 1.e-6
 
 n_mu: 2
 
@@ -22,5 +23,5 @@ n_plot: 20 # frequency of callback
 
 n_iter_buffer: 50
 n_iter_burnin: 100
-n_iter_tol: 5000
+n_iter_tol: 100
 convergence_tol: 1e-8
