--- a/Test_Beeline/Synthetic/LI/config.yaml
+++ b/Test_Beeline/Synthetic/LI/config.yaml
@@ -1,26 +1,27 @@
 network: "beeline_networks/Synthetic_LI.csv"
 ns: 7
+alpha: 1.0
 
 tfinal: 20.0
-ntotal: 1
+ntotal: 5
 nplot: 100
-batch_size: 1
+batch_size: 5
 epoch_size: -1
 
-lr: 1.e-3
+lr: 1.e-4
 weight_decay: 1.e-4
 
 n_mu: 2
 
 n_exp_train: 10
-n_exp_val: 2
-n_exp_test: 2
-noise: 0.1
+n_exp_val: 5
+n_exp_test: 5
+noise: 0.01
 
-n_iter_max: 100
+n_iter_max: 10000
 n_plot: 20 # frequency of callback
 
 n_iter_buffer: 10
 n_iter_burnin: 10
-n_iter_tol: 50
+n_iter_tol: 100
 convergence_tol: 1e-8
